[gd_scene load_steps=5 format=2]

[ext_resource path="res://photos/1.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/PuzzlePiece.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Background.gd" type="Script" id=3]
[ext_resource path="res://scenes/Puzzle.gd" type="Script" id=4]

[node name="Puzzle" type="Node2D"]
script = ExtResource( 4 )
number_of_rows = 3
number_of_columns = 4
PuzzlePiece = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 3 )

[node name="StackPosition" type="Position2D" parent="."]
position = Vector2( 843, 210 )

[node name="ColumnSpinbox" type="SpinBox" parent="."]
margin_left = 919.0
margin_top = 24.0
margin_right = 993.0
margin_bottom = 48.0

[node name="RowSpinbox" type="SpinBox" parent="."]
margin_left = 918.0
margin_top = 58.0
margin_right = 992.0
margin_bottom = 82.0

[node name="Pieces" type="Node2D" parent="."]

[node name="RowsLabel" type="Label" parent="."]
margin_left = 864.0
margin_top = 63.0
margin_right = 904.0
margin_bottom = 77.0
text = "Rows"

[node name="ColumnsLabel" type="Label" parent="."]
margin_left = 858.0
margin_top = 26.0
margin_right = 914.0
margin_bottom = 40.0
text = "Columns"

[connection signal="value_changed" from="ColumnSpinbox" to="." method="_on_ColumnSpinbox_value_changed"]
[connection signal="value_changed" from="RowSpinbox" to="." method="_on_RowSpinbox_value_changed"]
